# v8p.me-cli-rust

./: README.md
v8p-rs/: Cargo.toml
v8p-rs/src/: main.rs
